[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
# msgpacker = "0.4.5"
# msgpacker = { git = "https://github.com/tehmatt/msgpacker.git", branch = "tehmatt-maybe_uninit_uninit_array", features = ["alloc"] }
msgpacker = { version = "0.4.5", path = "../msgpacker/msgpacker" }
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_bytes = "0.11.17"
